# SCEPTRE-GenAI-Hack

./: .env  .gitignore  README.md  auth.py  browser.py  classifier.py  content_processor.py  database.py  fact_checker.py  knowledge_base.py  main.py  pyproject.toml  requirements.txt  response_generator.py  search_utils.py
frontend/: .env  README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AuthForm.tsx  ChatInterface.tsx  Dashboard.tsx  KnowledgeBase.tsx  VerificationInterface.tsx
frontend/src/components/ui/: button.tsx
frontend/src/pages/: Landing.tsx
notebooks/: GenAI_Hack.ipynb  test.py  tokenizer.pkl
