[project]
name = "genai-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "fastapi>=0.116.1",
    "joblib>=1.5.2",
    "moviepy>=2.2.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.1",
    "torchvision>=0.23.0",
    "uvicorn>=0.35.0",
]
